--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
       </div>
        <div class=" col-lg-7 col-md-7 col-sm-12 ">
         <div class="vegetable_img">
-         <figure><img src="images/DRY FRUITS 8.jpeg" alt=""/></figure>
+         <figure><img src="images/dry2.jpeg" alt=""/></figure>
          <span>01</span>
         </div>
       </div>
        <div class=" col-lg-8 col-md-8 col-sm-12 ">
         <div class="vegetable_img margin_top">
-         <figure><img src="images/dry fruits 2.jpg" alt=""/></figure>
+         <figure><img src="images/dry1.jpg" alt=""/></figure>
          <span>02</span>
         </div>
         
