--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
                         <div class="address">
                           <h3>Popular Link</h3>
                           <ul class="Menu_footer">
-                            <li class="active"> <a href="#">About Us</a> </li>
-                            <li><a href="#">Our variety</a> </li>
-                            <li><a href="#">Contact</a> </li>
+                            <li class="active"> <a href="#about">About Us</a> </li>
+                            <li><a href="#variety">Our variety</a> </li>
+                            <li><a href="#contact">Contact</a> </li>
                             
                           </ul>
                         </div>
