--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <!-- site metas -->
-  <title>shree</title>
+  <title>Shri Balaji</title>
+  <link rel="icon" href="images/WhatsApp Image 2021-12-02 at 23.13.17.jpeg" type="image/x-icon">
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -89,7 +90,7 @@
                 <div class="row">
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                     <div class="text-bg">
-                     <span>Welcome To Shree Balaji</span>
+                     <span>Welcome To Shri Balaji</span>
                       <h1>DRY FRUITS Shop</h1>
                       <p>Leading Manufacturers and Suppliers of Dry fruits
                         like Cashew,Almonds,Raisins,Walnuts etc. </p>
@@ -410,7 +411,7 @@
               </div>
               <div class="copyright">
                 <div class="container">
-                  <p>Copyright © 2021 Shree Balaji Mewa distributors </a></p>
+                  <p>Copyright © 2021 Shri Balaji Mewa distributors </a></p>
                 </div>
               </div>
             </div>
