--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                     <div class="text-bg">
                      <span>Welcome To Shri Balaji</span>
-                      <h1>DRY FRUITS Shop</h1>
+                      <h1>MEWA distributors</h1>
+                      <span><h2 >From Growers to Eaters</h2></span>
                       <p>Leading Manufacturers and Suppliers of Dry fruits
-                        like Cashew,Almonds,Raisins,Walnuts etc. </p>
+                        like Cashew, especially Almonds,Raisins,Walnuts etc. </p>
                       
                       <a href="#contact">Contact Us</a> <a href="#variety">Dry Fruits</a>
                     </div>
@@ -132,13 +133,14 @@
         <div class="about-box">
           <h2>About us</h2>
           <p>We are leading manufacturer, processor, trader of different 
-              varieties of dry- fruits. We are processing, grading, Packaging and marketing our different 
-              range of Dry-fruit under our registered trademark “Shri Balaji Mewa Distributors”. 
+              varieties of almonds & dry- fruits. We are processing, grading, Packaging and marketing our different 
+              range of almonds & Dry-fruit under our registered trademark “Shri Balaji Mewa Distributors”. 
+              <span >Our speciality includes rich and pure range of Almonds.</span>
               For all the products that we process and grad in our unit premises we ensure that our clients
                are served hygienic and quality products.To maintain high quality, we follow stringent processes 
-               for selecting and procuring the best dry fruits and nuts. Once we receive such hand-picked dry 
-               fruits and nuts, we clean, sort and package them manually at our state-of-the-art facility. This
-                ensures that only the freshest and highest quality of dry fruits and nuts are shipped to you. </p>
+               for selecting and procuring the best dry fruits & Almonds. Once we receive such hand-picked dry 
+               fruits & Almonds, we clean, sort and package them manually at our state-of-the-art facility. This
+                ensures that only the freshest and highest quality of dry fruits and Almonds are shipped to you. </p>
           <!--<a href="Javascript:void(0)">Read more</a>-->
         </div>
       </div>
@@ -169,7 +171,7 @@
       <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 ">
         <div class="vegetable_shop">
           <h3>Best Dry Fruit Shop</h3>
-          <p>What makes us best is our promise to deliever pure and wholesome dry fruits. When you receive a product from us ,you can rest assured it 
+          <p>What makes us best is our promise to deliever pure and wholesome Almonds & dry fruits. When you receive a product from us ,you can rest assured it 
              
              has been sealed with a three-pronged promise of offering you the gateway to what is healthy,wholesome
               and pure.Our prime concern is to provide the products which improve your health and well-being. 
@@ -214,6 +216,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
+
 						<div class="product-image">
 							<img src="images/shell almond.jpg" height="90" alt="">
 						</div>
@@ -315,6 +318,7 @@
    </div>
 
 </div>
+
     <div class="white_color">
       <div class="row">
 
