--- a/index.html
+++ b/index.html
@@ -369,12 +369,13 @@
       <div class="footer ">
         <div class="container">
           <div class="row">
-            <div class="col-md-12">
-             <a href="#" class="logo_footer"> <img src="images/WhatsApp Image 2021-12-02 at 23.13.17.jpeg" height="100" width="100" alt="#"/></a>
-            </div>
+            
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
               <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 ">
+                <div class="col-lg-3 col-md-6">
+                  <a href="#" class="logo_footer"> <img src="images/WhatsApp Image 2021-12-02 at 23.13.17.jpeg" height="100" width="100" alt="#"/></a>
+                 </div>
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 ">
                   <div class="address">
                     <h3>Address </h3>
                     <ul class="loca">
@@ -385,7 +386,7 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="address">
                           <h3>Popular Link</h3>
                           <ul class="Menu_footer">
@@ -398,7 +399,7 @@
                       </div>
                      
 
-                      <div class="col-lg-4 col-md-6 col-sm-6 ">
+                      <div class="col-lg-3 col-md-6 col-sm-6 ">
                         <div class="address">
                           <h3>Contact us Directly</h3>
                           <ul class="Menu_footer" >
